Tapping/longpressing should result in INSERTION_HANDLE_SHOWN

If a touch insertion handle was visible inside of a editable text box tapping/long-
pressing somewhere else in the box caused a INSERTION_HANDLE_MOVED. This CL changes
it to cause a INSERTION_HANDLE_SHOWN. This is already how touch selection handles
work. If there is a selection and you long-press a different select this triggers
SELECTION_HANDLES_SHOWN and not SELECTION_HANDLES_MOVED.

BUG=698376

Review-Url: https://codereview.chromium.org/2733603003
Cr-Commit-Position: refs/heads/master@{#455214}

Former-commit-id: f5bcdf6b4e9f48cdbac1c3621653319e573b9b58